# otter-grader

./: .coverage  .coveragerc  .dockerignore  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  codecov.yml  docker-out.ipynb  environment.yml  final_grades.csv  metadata.py  pyproject.toml  release.py  requirements-export.txt  requirements-test.txt  requirements.txt  rtd_environment.yml  service_requirements.txt  setup.py  slack-shields.json  test-Dockerfile  test_requirements.txt  update_versions.py  utils.py
.circleci/: config.yml
.env/: pyvenv.cfg
.github/: stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  information-request.md
.github/workflows/: add-issues-to-project.yml  check-formatting.yml  docker-build.yml  main.yml  release.yml  run-docker-tests-beta.yml  run-docker-tests.yml  run-tests.yml
demo/: demo.ipynb  final_grades.csv
demo/autograder/: requirements.txt  run_autograder
demo/scripts/: file48.py
docker/: Dockerfile  grade.py
docs/: Makefile  api_reference.md  api_reference.rst  changelog.md  cli_reference.md  cli_reference.rst  command-line.md  conf.py  debugging.rst  deploy_service.md  dot_otter_files.md  execution.md  execution.rst  getting_started.md  gradescope.md  import_images.md  import_images.rst  in_notebook.md  index.html  index.md  index.rst  index_beta.md  install.md  logging.md  logging.rst  metadata_files.md  modules.rst  otter.assign.r_adapter.rst  otter.assign.rmarkdown_adapter.rst  otter.assign.rst  otter.check.rst  otter.execute.rst  otter.export.exporters.rst  otter.export.rst  otter.generate.rst  otter.generate.run_autograder.r_adapter.rst  otter.generate.run_autograder.rst  otter.grade.rst  otter.plugins.builtin.rst  otter.plugins.rst  (+23 more)
docs/R/: assign.md  index.md  ottr.md
docs/_build/: .buildinfo  changelog.html  cli.html  command-line.html  deploy_service.html  genindex.html  getting_started.html  gradescope.html  import_images.html  in_notebook.html  index.html  index_beta.html  install.html  metadata.html  metadata_files.html  modules.html  objects.inv  otter.generate.html  otter.html  otter.service.html  otter_assign.html  otter_check.html  otter_generate.html  otter_grade.html  otter_service.html  pdfs.html  py-modindex.html  search.html  searchindex.js  seeding.html  student_usage.html  test_files.html  tests.html  tests_files.html  tutorial.html  using_otter.html
docs/_static/: grading-environment-r.yml  grading-environment.yml  python_setup.sh  r_setup.sh  style.css
docs/_templates/: layout.html
docs/otter_assign/: cli_reference.md  index.md  index.rst  notebook_format.rst  python_notebook_format.md  python_notebook_format.rst  r_notebook_format.md  r_notebook_format.rst  rmd_format.md  rmd_format.rst  usage.md  usage.rst
docs/otter_check/: dot_otter_files.md  dot_otter_files.rst  index.md  index.rst
docs/otter_generate/: cli_reference.md  config_files.md  container_image.md  gs_results.md  index.md
docs/otter_run/: cli_reference.md  grading_results.md  index.md
docs/plugins/: builtin.md  creating_plugins.md  creating_plugins.rst  index.md  index.rst
docs/python/: index.md  otter_check.md  seeding.md  tutorial.md
docs/test_files/: index.md  index.rst  ok_format.md  ok_format.rst  python_format.rst  r_format.rst  testthat_format.md  testthat_format.rst
docs/tutorial/: demo-fails2.ipynb  demo-fails3.ipynb  demo.ipynb  meta.json  template.ipynb
docs/workflow/: index.md  index.rst
examples/: README.md
examples/data-88e-proj03/: README.md  proj03.ipynb  requirements.txt
examples/data-88e-proj03-exception/: README.md  proj03.ipynb
examples/env-validation/: README.md  data.csv  env-validation.ipynb
helpful-scripts/: gradescopeify.py  otterify.py
local_grader/: cli.py  docker.py  eg_grades.csv  final_grades.csv  grades.py  metadata.py  utils.py
logo/: favicon.psd
manual-test/: meta.yml
manual-test/tests/: q1.py
otter/: __init__.py  __main__.py  api.py  argparser.py  assign.py  assign2.py  check.py  cli.py  containers.py  docker.py  execute.py  generate.py  gofer.py  grade.py  grades.py  gs_generator.py  jassign.py  logging.py  logs.py  metadata.py  nbmeta_config.py  notebook.py  ok_parser.py  parallel.py  run.py  runner.py  script.py  utils.py  version.py
otter-grader/: Dockerfile  grade.py
otter.R/: DESCRIPTION  NAMESPACE
otter.R/R/: otter.r
otter.R/man/: check.Rd  execute_script.Rd  get_case_metadata.Rd  load_test_metadata.Rd  make_secret.Rd  run_gradescope.Rd
otter.R/tests/: sample_script.r  sample_test.r  sample_test_2.r
otter/assign/: __init__.py  assignment.py  blocks.py  cell_factory.py  cell_generators.py  constants.py  defaults.py  feature_toggle.py  file_generators.py  notebook_converter.py  notebook_transformer.py  output.py  plugins.py  question_config.py  questions.py  solutions.py  tests.py  tests_manager.py  utils.py
otter/check/: __init__.py  logs.py  notebook.py  utils.py
otter/cosette/: cosette.py  sql_ag.py  sql_ast.py
otter/execute/: __init__.py  check_wrapper.py  checker.py  execute_log.py  execute_notebook.py  execute_script.py  logging.py  preprocessor.py  preprocessors.py  results.py  transforms.py
otter/export/: __init__.py  filter.py  test.tplx  utils.py
otter/generate/: __init__.py  autograder.py  constants.py  generate.py  run_autograder.py  token.py  utils.py
otter/grade/: Dockerfile  __init__.py  __main__.py  containers.py  metadata.py  utils.py
otter/plugins/: __init__.py  abstract_plugin.py
otter/run/: __init__.py  api.py
otter/server/: update.py
otter/service/: __init__.py  build.py  (+5 more)
ottr/: .Rbuildignore
test/: Dockerfile  __init__.py  __main__.py  conftest.py  example.ipynb  integration.py  test_api.py  test_assign.py  test_build.py  test_check.py  test_cli.py  test_conda.py  test_create.py  test_export.py  test_generate.py  test_grade.py  test_integration.py  test_logs.py  test_notebook.py  test_parsers.py  test_run.py  test_service.py  test_utils.py  utils.py
tests/: parsers.py
(+746 files in other folders)
